--- a/flex-projeto/index.html
+++ b/flex-projeto/index.html
@@ -22,7 +22,7 @@
         <div class="texto-apresentacao">
             <h1>Flex <br>Turismos</h1>
             <p>O melhor serviço para você!</p>
-            <a href="">Saiba Mais!</a>
+            <a href="" class="btn">Saiba Mais!</a>
         </div>
 
         <div>
@@ -84,7 +84,7 @@
                      <li>Serviços de quarto</li>
                      <li>Guia turístico</li>
                  </ul>
-                 <a href="#">Saiba Mais!</a>
+                 <a href="#" class="btn">Saiba Mais!</a>
              </div>
 
              <div class="item-plano">
@@ -96,7 +96,7 @@
                      <li>Roteiro de trilhas</li>
                      <li>Serviço personalizado</li>
                  </ul>
-                 <a href="#">Saiba Mais!</a>
+                 <a href="#" class="btn">Saiba Mais!</a>
              </div>
 
              <div class="item-plano">
@@ -109,7 +109,7 @@
                      <li>Serviço personalizado</li>
                      <li>Área Vip</li>
                  </ul>
-                 <a href="#">Saiba Mais!</a>
+                 <a href="#" class="btn">Saiba Mais!</a>
              </div>
         </div>
      </div>
